--- a/website.html
+++ b/website.html
@@ -1,3 +1,5 @@
-<p>Paragraph of text</p>
+
 <button>Hello button</button>
+<p>.    Paragraph.           of text</p>
+<a href="https://www.google.com/" target="_blank">Google Page</a>
 
