--- a/website.html
+++ b/website.html
@@ -1,5 +1,5 @@
 
 <button>Hello button</button>
-<p>.    Paragraph.           of text</p>
+<p>Paragraph of text</p>
 <a href="https://www.google.com/" target="_blank">Google Page</a>
 
