All youtube course

--- a/html-css-practise/buttons.html
+++ b/html-css-practise/buttons.html
@@ -1,34 +1,16 @@
+<!DOCTYPE html>
+<html>
+<header>
+  <title>My First Page</title>
+<link rel="stylesheet" href="styles.css">
+</header>
 
-<style>
+<body>
 
-.subscribe-button {
-background-color: red;
-color: white;
-height: 36px;
-width: 102px;
+  <button class="subscribe-button">SUBSCRIBE</button>
+  <button class="join-button">JOIN</button>
+  <button class="tweet-button">Tweet</button>
 
-}
+</body>
 
-.join-button {
-background-color: white;
-color: blue;
-border-color: blue;
-height: 36px;
-width: 102px;
-
-}
-
-.tweet-button {
-background-color: rgb(21, 164, 208);
-border: rgb(21, 164, 208);
-height: 36px;
-width: 102px;
-}
-
-</style>
-
-
-<button class="subscribe-button">SUBSCRIBE</button>
-<button class="join-button">JOIN</button>
-<button class="tweet-button">Tweet</button>
-
+</html>
